--- a/web/index.html
+++ b/web/index.html
@@ -38,8 +38,35 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <!-- Styling for loading indicator -->
+<style>
+  .container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+  }
+  .indicator {
+  width: 10vw;
+  }
+  </style>
 </head>
-<body>
+<body style="overflow: hidden">
+    <div id="loading_container" class="container">
+    <img src="/assets/images/loding.gif" alt="loading indicator" class="indicator">
+    </div>
+    <script>
+      window.onload = function () {
+      setTimeout(function () {
+      var loadingIndicator = document.getElementById("loading_container");
+      if (loadingIndicator) {
+      loadingIndicator.remove();
+      }
+      },10000)
+      }
+      </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
